tests/NormalTests/paczka1/small_fuzzy/66298270.err
Error in line 7: y3BrYftJf A627 20,2
Error in line 15: q8GLh S254 303,7
